# Vaulta

./: .env.example  .gitignore  .mcp.json.template  CLAUDE.md  VAULTA_ACCESS_CONTROL_REVIEW.md  VAULTA_BUILD_PLAN.md  VAULTA_CODE_AUDIT.md  VAULTA_COMPLETION_REPORT.md  VAULTA_DATA_MODEL_REVIEW.md  VAULTA_FEATURE_GAP_MATRIX.md  VAULTA_SECURITY_REVIEW.md  VAULTA_TEST_PLAN.md  VAULTA_UX_REVIEW.md  VAULTA_WEBSITE_PROMISE_AUDIT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
.claude/: launch.json
.claude/project/: ARCHITECTURE.md  CONNECTORS.md  DECISIONS.md  HANDOVER.md  PROJECT_BRIEF.md  RISK_REGISTER.md  ROADMAP.md
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Sidebar.tsx  TitleBar.tsx
apps/desktop/src/lib/: useSupabaseData.ts
apps/desktop/src/views/: Alerts.tsx  AuditLog.tsx  Login.tsx  Overview.tsx  Patients.tsx
apps/mobile/: .env.local.example  app.json  package.json
apps/web/: .env.local.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/daily-checkin-reminder/: index.ts
supabase/functions/vitals-alert-trigger/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_patient_invites.sql  003_auth_hardening.sql
(+52 files in other folders)
