[package]
name = "vaulta-desktop"
version = "2.0.0"
description = "Vaulta Caregiver Desktop App"
authors = ["Vaulta"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vaulta_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
